--- a/package.json
+++ b/package.json
@@ -7,79 +7,83 @@
   "private": true,
   "description": "SatisGraphtory App",
   "dependencies": {
-    "@devexpress/dx-react-core": "^2.0.4",
-    "@devexpress/dx-react-grid": "^2.0.4",
-    "@devexpress/dx-react-grid-material-ui": "^2.0.4",
-    "@emotion/core": "^10.0.17",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/free-regular-svg-icons": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.0.0-rc.0",
-    "@octokit/rest": "^16.28.8",
-    "@types/jest": "24.0.18",
-    "@types/mathjs": "^6.0.2",
-    "@types/node": "12.7.11",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "^16.9.1",
+    "@devexpress/dx-react-core": "^2.4.0",
+    "@devexpress/dx-react-grid": "^2.4.0",
+    "@devexpress/dx-react-grid-material-ui": "^2.4.0",
+    "@emotion/core": "^10.0.27",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
+    "@octokit/rest": "^16.41.0",
+    "@types/jest": "^24.9.1",
+    "@types/mathjs": "^6.0.4",
+    "@types/node": "^12.12.26",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@waiting/base64": "^4.2.9",
-    "@welldone-software/why-did-you-render": "^3.3.3",
-    "apollo-boost": "^0.4.4",
+    "@welldone-software/why-did-you-render": "^3.6.0",
+    "apollo-boost": "^0.4.7",
     "apollo-link-schema": "^1.2.4",
     "autosuggest-highlight": "^3.1.1",
     "base64-blob": "^1.4.1",
     "canvas-5-polyfill": "^0.1.5",
-    "clean-deep": "^3.0.5",
+    "clean-deep": "^3.2.0",
     "clsx": "^1.0.4",
-    "d3": "^5.12.0",
-    "dagre": "^0.8.4",
+    "d3": "^5.15.0",
+    "dagre": "^0.8.5",
     "deep-diff": "^1.0.2",
     "electron-is-dev": "^1.1.0",
-    "firebase": "6.6.0",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "fibers": "^4.0.2",
+    "firebase": "^6.6.2",
     "fontfaceobserver": "^2.1.0",
-    "graphql": "^14.5.8",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.5",
-    "husky": "^3.0.5",
-    "immer": "^4.0.1",
-    "lint-staged": "^9.2.5",
+    "graphql-tools": "^4.0.6",
+    "husky": "^3.1.0",
+    "immer": "^4.0.2",
+    "lint-staged": "^9.5.0",
     "lodash": "^4.17.15",
     "lzutf8": "^0.5.5",
-    "mathjs": "6.2.1",
+    "mathjs": "^6.5.0",
     "multi-metagen": "^2.6.0",
+    "node-sass": "^4.13.1",
     "normalize-wheel": "^1.0.1",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
     "protocol-buffers-encodings": "^1.1.0",
-    "react": "16.9.0",
-    "react-apollo": "^3.1.0",
+    "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-autosuggest": "^9.4.3",
     "react-custom-scrollbars": "^4.2.1",
-    "react-device-detect": "^1.7.5",
-    "react-dom": "^16.9.0",
-    "react-dropdown-select": "^3.5.0",
-    "react-flip-toolkit": "^7.0.5",
+    "react-device-detect": "^1.11.14",
+    "react-dom": "^16.12.0",
+    "react-dropdown-select": "^3.11.0",
+    "react-flip-toolkit": "^7.0.7",
     "react-focus-trap": "^2.7.1",
-    "react-helmet-async": "^1.0.3",
+    "react-helmet-async": "^1.0.4",
     "react-localize-redux": "^3.5.3",
-    "react-modal": "^3.10.1",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "react-select": "^3.0.4",
+    "react-modal": "^3.11.1",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.1",
+    "react-select": "^3.0.8",
     "react-syntax-highlighter": "^11.0.2",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "roboto-fontface": "^0.10.0",
+    "sass": "^1.25.0",
     "scheduler": "^0.15.0",
     "seamless-immutable": "^7.1.4",
     "throttle-debounce": "^2.1.0",
-    "typeface-roboto-condensed": "0.0.75",
-    "typescript": "^3.6.3"
+    "typeface-roboto-condensed": "^0.0.75",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
@@ -127,16 +131,16 @@
   "devDependencies": {
     "@codechecks/client": "^0.1.10",
     "@codechecks/lighthouse-keeper": "^0.1.2",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-links": "^5.3.9",
+    "@storybook/addons": "^5.3.9",
+    "@storybook/react": "^5.3.9",
     "@types/d3": "^5.7.2",
     "concurrently": "^4.1.2",
     "cross-env": "^5.2.1",
-    "electron": "^6.0.11",
+    "electron": "^6.1.7",
     "electron-builder": "^21.2.0",
-    "jest-canvas-mock": "^2.1.1",
+    "jest-canvas-mock": "^2.2.0",
     "wait-on": "^3.3.0"
   },
   "husky": {
