run snap publishing

--- a/.github/workflows/electronpublish.yml
+++ b/.github/workflows/electronpublish.yml
@@ -33,6 +33,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build
-      - run: npm run release-standalone -- -c.snap.publish=github
+      - run: npm run release-standalone -- "-c.snap.publish=github"
         env:
           GH_TOKEN: ${{secrets.GH_TOKEN}}
