--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
     "protocol-buffers-encodings": "^1.1.0",
+    "pullstate": "^1.10.0",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-autosuggest": "^9.4.3",
@@ -83,7 +84,8 @@
     "seamless-immutable": "^7.1.4",
     "throttle-debounce": "^2.1.0",
     "typeface-roboto-condensed": "^0.0.75",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "workerize": "^0.1.8"
   },
   "scripts": {
     "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
