--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "throttle-debounce": "^2.1.0",
     "typeface-roboto-condensed": "^0.0.75",
     "typescript": "^3.7.5",
-    "workerize": "^0.1.8"
+    "workerize-loader": "^1.1.0"
   },
   "scripts": {
     "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
