--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "autosuggest-highlight": "^3.1.1",
     "base64-blob": "^1.4.1",
     "canvas-5-polyfill": "^0.1.5",
+    "class-transformer": "^0.2.3",
     "clean-deep": "^3.2.0",
     "clsx": "^1.0.4",
     "d3": "^5.15.0",
@@ -78,6 +79,7 @@
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
     "roboto-fontface": "^0.10.0",
     "sass": "^1.25.0",
     "scheduler": "^0.18.0",
