--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
+    "@msgpack/msgpack": "^1.11.0",
     "@octokit/rest": "^16.41.1",
     "@types/jest": "^25.1.1",
     "@types/mathjs": "^6.0.4",
@@ -133,8 +134,6 @@
     ]
   },
   "devDependencies": {
-    "@codechecks/client": "^0.1.10",
-    "@codechecks/lighthouse-keeper": "^0.1.2",
     "@storybook/addon-actions": "^5.3.9",
     "@storybook/addon-links": "^5.3.9",
     "@storybook/addons": "^5.3.9",
