Add a demo wizard

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^16.9.5",
     "@waiting/base64": "^4.2.9",
     "@welldone-software/why-did-you-render": "^4.0.0",
+    "array-move": "^2.2.2",
     "autosuggest-highlight": "^3.1.1",
     "base64-blob": "^1.4.1",
     "canvas-5-polyfill": "^0.1.5",
@@ -67,7 +68,9 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scrollbars-custom": "^4.0.25",
     "react-select": "^3.0.8",
+    "react-sortable-hoc": "^1.11.0",
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
