--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@welldone-software/why-did-you-render": "^4.0.0",
     "array-move": "^2.2.2",
     "autosuggest-highlight": "^3.1.1",
+    "babel-polyfill": "^6.26.0",
     "base64-blob": "^1.4.1",
     "canvas-5-polyfill": "^0.1.5",
     "class-transformer": "^0.2.3",
@@ -54,6 +55,7 @@
     "protocol-buffers-encodings": "^1.1.0",
     "pullstate": "^1.14.0",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
     "react-autosuggest": "^10.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-device-detect": "^1.13.1",
