--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.2.3",
     "clean-deep": "^3.2.0",
     "clsx": "^1.0.4",
+    "core-js": "^3.6.5",
     "d3": "^5.15.0",
     "dagre": "^0.8.5",
     "deep-diff": "^1.0.2",
