--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "fast-memoize": "^2.5.2",
     "fibers": "^5.0.0",
     "fontfaceobserver": "^2.1.0",
+    "framer": "^1.2.5",
+    "framer-motion": "^1.11.1",
     "husky": "^4.2.1",
     "immer": "^7.0.4",
     "kiwi.js": "^1.1.2",
@@ -83,7 +85,9 @@
     "scheduler": "^0.19.1",
     "seamless-immutable": "^7.1.4",
     "throttle-debounce": "^2.1.0",
+    "typeface-roboto": "^0.0.75",
     "typeface-roboto-condensed": "^0.0.75",
+    "typeface-roboto-mono": "^0.0.75",
     "typescript": "^3.7.5",
     "workerize-loader": "^1.3.0"
   },
