--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@inlet/react-pixi": "^5.0.1",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -52,6 +53,7 @@
     "multi-metagen": "^3.0.0",
     "node-sass": "^4.13.1",
     "normalize-wheel": "^1.0.1",
+    "pixi.js": "^5.3.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
