--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@msgpack/msgpack": "^1.11.0",
+    "@sentry/react": "^5.19.0",
     "@types/jest": "^26.0.0",
     "@types/mathjs": "^6.0.4",
     "@types/node": "^14.0.13",
