--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "node-sass": "^4.13.1",
     "normalize-wheel": "^1.0.1",
     "pixi.js": "^5.3.0",
+    "pixi.js-legacy": "^5.3.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "protobufjs": "^6.8.8",
