Fail build on husky

--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "eslint -- fix",
       "prettier --single-quote --write"
     ],
     "public/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
