--- a/package.json
+++ b/package.json
@@ -152,8 +152,9 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "eslint -- fix",
-      "prettier --single-quote --write"
+      "eslint . --fix",
+      "prettier --single-quote --write",
+      "git add"
     ],
     "public/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --single-quote --write"
