--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "eslint src/**/* --fix",
+      "eslint src/**/*.{js,jsx,ts,tsx} --fix",
       "prettier --single-quote --write",
       "git add"
     ],
