--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./graph",
   "display": "standalone",
   "theme_color": "#FB8C00",
   "background_color": "#FB8C00"
