--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multi-metagen": "^3.0.0",
     "node-sass": "^4.13.1",
     "normalize-wheel": "^1.0.1",
+    "pixi-viewport": "^4.12.0",
     "pixi.js": "^5.3.0",
     "pixi.js-legacy": "^5.3.0",
     "prettier": "^2.0.5",
