--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@msgpack/msgpack": "^1.11.0",
     "@sentry/react": "^5.19.0",
+    "@types/bezier-js": "^0.0.8",
     "@types/jest": "^26.0.0",
     "@types/mathjs": "^6.0.4",
     "@types/node": "^14.0.13",
@@ -30,6 +31,7 @@
     "autosuggest-highlight": "^3.1.1",
     "babel-polyfill": "^6.26.0",
     "base64-blob": "^1.4.1",
+    "bezier-js": "^2.6.1",
     "canvas-5-polyfill": "^0.1.5",
     "class-transformer": "^0.2.3",
     "clean-deep": "^3.2.0",
@@ -39,6 +41,7 @@
     "dagre": "^0.8.5",
     "deep-diff": "^1.0.2",
     "electron-is-dev": "^1.1.0",
+    "eventemitter3": "^4.0.4",
     "fast-memoize": "^2.5.2",
     "fibers": "^5.0.0",
     "fontfaceobserver": "^2.1.0",
