--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "scheduler": "^0.19.1",
     "seamless-immutable": "^7.1.4",
     "throttle-debounce": "^2.1.0",
+    "typeface-bebas-neue": "^1.1.3",
     "typeface-roboto": "^0.0.75",
     "typeface-roboto-condensed": "^0.0.75",
     "typeface-roboto-mono": "^0.0.75",
