--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-localize-redux": "^3.5.3",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
+    "react-resize-detector": "^5.0.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
