--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scroll-horizontal": "^1.6.4",
     "react-scrollbars-custom": "^4.0.25",
     "react-select": "^3.0.8",
     "react-sortable-hoc": "^1.11.0",
