--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "typeface-roboto-slab": "^1.1.4",
     "typeface-source-sans-pro": "^1.1.5",
     "typescript": "^3.7.5",
+    "uuid": "^8.3.0",
     "workerize-loader": "^1.3.0"
   },
   "scripts": {
@@ -157,7 +158,8 @@
     "electron-builder": "^22.7.0",
     "jest-canvas-mock": "^2.2.0",
     "wait-on": "^4.0.0",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "@types/uuid": "^8.3.0"
   },
   "remarkConfig": {
     "plugins": [
