--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/loadable__component": "^5.13.0",
     "@types/mathjs": "^6.0.4",
     "@types/node": "^14.0.13",
+    "@types/pako": "^1.0.1",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.5",
+    "@types/semver": "^7.3.4",
+    "@types/uuid": "^8.3.0",
     "@waiting/base64": "^4.2.9",
     "@welldone-software/why-did-you-render": "^4.0.0",
     "array-move": "^3.0.0",
@@ -32,6 +35,7 @@
     "babel-polyfill": "^6.26.0",
     "base64-blob": "^1.4.1",
     "bezier-js": "^2.6.1",
+    "buffer": "^5.6.0",
     "canvas-5-polyfill": "^0.1.5",
     "clean-deep": "^3.2.0",
     "clsx": "^1.0.4",
@@ -41,6 +45,7 @@
     "electron-is-dev": "^1.1.0",
     "eventemitter3": "^4.0.4",
     "fast-memoize": "^2.5.2",
+    "fflate": "^0.1.0",
     "fibers": "^5.0.0",
     "fontfaceobserver": "^2.1.0",
     "framer": "^1.2.5",
@@ -55,6 +60,7 @@
     "multi-metagen": "^4.0.3",
     "node-sass": "^4.13.1",
     "normalize-wheel": "^1.0.1",
+    "pako": "^1.0.11",
     "pixi-viewport": "^4.12.0",
     "pixi.js": "^5.3.0",
     "pixi.js-legacy": "^5.3.0",
@@ -94,6 +100,7 @@
     "sass": "^1.26.9",
     "scheduler": "^0.19.1",
     "seamless-immutable": "^7.1.4",
+    "semver": "^7.3.2",
     "throttle-debounce": "^2.1.0",
     "typeface-bebas-neue": "^1.1.3",
     "typeface-raleway": "^0.0.75",
@@ -154,8 +161,7 @@
     "electron-builder": "^22.7.0",
     "jest-canvas-mock": "^2.2.0",
     "wait-on": "^4.0.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "@types/uuid": "^8.3.0"
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "remarkConfig": {
     "plugins": [
