--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bezier-js": "^0.0.8",
     "@types/jest": "^26.0.0",
     "@types/loadable__component": "^5.13.0",
+    "@types/lz-string": "^1.3.34",
     "@types/mathjs": "^6.0.4",
     "@types/node": "^14.0.13",
     "@types/pako": "^1.0.1",
@@ -55,6 +56,7 @@
     "kiwi.js": "^1.1.2",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.15",
+    "lz-string": "^1.4.4",
     "lzutf8": "^0.5.5",
     "mathjs": "^7.0.1",
     "multi-metagen": "^4.0.3",
