--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "fflate": "^0.1.0",
     "fibers": "^5.0.0",
     "fontfaceobserver": "^2.1.0",
+    "fontsource-raleway": "^3.0.9",
+    "fontsource-roboto-condensed": "^3.0.9",
+    "fontsource-roboto-mono": "^3.0.3",
+    "fontsource-roboto-slab": "^3.0.3",
+    "fontsource-source-sans-pro": "^3.0.9",
     "framer": "^1.2.5",
     "framer-motion": "^2.7.6",
     "husky": "^4.2.1",
@@ -104,13 +109,6 @@
     "seamless-immutable": "^7.1.4",
     "semver": "^7.3.2",
     "throttle-debounce": "^2.1.0",
-    "typeface-bebas-neue": "^1.1.3",
-    "typeface-raleway": "^0.0.75",
-    "typeface-roboto": "^0.0.75",
-    "typeface-roboto-condensed": "^0.0.75",
-    "typeface-roboto-mono": "^0.0.75",
-    "typeface-roboto-slab": "^1.1.4",
-    "typeface-source-sans-pro": "^1.1.5",
     "typescript": "^4.0.3",
     "uuid": "^8.3.0",
     "workerize-loader": "^1.3.0"
