--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,11 @@
   status = 200
 
 [[redirects]]
+  from = "/privacy/*"
+  to = "/index.html"
+  status = 200
+  
+[[redirects]]
   from = "/graph/*"
   to = "/index.html"
   status = 200
@@ -12,7 +17,6 @@
   from = "/hub/*"
   to = "/index.html"
   status = 200
-
 
 [[redirects]]
   from = "/data/*"
