Add terms netlify page

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,12 @@
   from = "/privacy/*"
   to = "/index.html"
   status = 200
-  
+
+[[redirects]]
+  from = "/terms/*"
+  to = "/index.html"
+  status = 200
+
 [[redirects]]
   from = "/graph/*"
   to = "/index.html"
