--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fontsource-source-sans-pro": "^3.0.9",
     "framer": "^1.2.5",
     "framer-motion": "^2.7.6",
+    "gapi-client": "^0.0.3",
     "husky": "^4.2.1",
     "immer": "^7.0.4",
     "kiwi.js": "^1.1.2",
