--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@waiting/base64": "^4.2.9",
     "@welldone-software/why-did-you-render": "^4.0.0",
     "adjectives": "^1.0.2",
+    "apexcharts": "^3.23.1",
     "array-move": "^3.0.0",
     "autosuggest-highlight": "^3.1.1",
     "babel-polyfill": "^6.26.0",
@@ -79,6 +80,7 @@
     "protocol-buffers-encodings": "^1.1.0",
     "pullstate": "^1.14.0",
     "react": "17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-app-polyfill": "^2.0.0",
     "react-autosuggest": "^10.0.2",
     "react-custom-scrollbars": "^4.2.1",
